--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,3 +1,4 @@
+/*@import url(https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.css);*/
 body{
     position: absolute;
     width: 1440px;
@@ -50,6 +51,17 @@ body{
     margin-top: 20px;
 
     background-color: #C4C4C4;
+}
+
+#retangulo_cinco{
+    position: absolute;
+    width: 860px;
+    height: 1129px;
+    left: 290px;
+    top: 60px;
+
+    background: #FFFFFF;
+    border-radius: 12px;
 }
 
 h1{
@@ -114,6 +126,40 @@ h1{
     font-weight: 500;
     font-size: 24px;
     line-height: 28px;
+}
+
+#mensagem_um h2{
+    position: absolute;
+    width: 546px;
+    height: 28px;
+    left: 350px;
+    top: 270px;
+
+    color: #222222;
+
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    
+}
+
+#mensagem_dois h2{
+    position: absolute;
+    width: 469px;
+    height: 18px;
+    left: 486px;
+    top: 1111px;
+
+    color: #222222;
+
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 18px;
+
 }
 
 #question_one h3{
@@ -390,6 +436,19 @@ h1{
     border-radius: 8px;
 }
 
+#btn_gabarito{
+    position: absolute;
+    width: 235px;
+    height: 56px;
+    left: 603px;
+    top: 983px;
+
+    background: #FFFFFF;
+    border: 1px solid #1B50B6;
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+
 #div_submit h3{
     position: absolute;
     width: 47px;
@@ -398,13 +457,31 @@ h1{
     top: 2061px;
     margin-top: 2px;
 
+    color: #918d8d;
+
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
 
-    color: #FFFFFF;
+}
+
+#gabarito h3{
+    position: absolute;
+    width: 95px;
+    height: 18px;
+    left: 673px;
+    top: 1002px;
+    margin-top: 2px;
+
+    color: #1B50B6;
+
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18px;
 }
 
 #div_cancel #cancel{
@@ -422,4 +499,25 @@ h1{
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
+}
+
+#grafico{
+    height: 530px;
+    width: 530px;
+}
+
+#mensagemResultado h1{
+    position: absolute;
+    width: 541px;
+    height: 55px;
+    left: 350px;
+    top: 180px;
+
+    color: #222222;
+
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 55px;
 }
