--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,4 +1,3 @@
-/*@import url(https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.css);*/
 body{
     position: absolute;
     width: 1440px;
@@ -9,7 +8,7 @@ body{
     background-color: #F0F0F0;
 }
 
-#rectangle{
+#retangulo{
     position: absolute;
     width: 860px;
     height: 2092px;
@@ -20,7 +19,7 @@ body{
     
 }
 
-#rectangle_two{
+#retangulo_dois{
     position: absolute;
     width: 618px;
     height: 4px;
@@ -31,7 +30,7 @@ body{
     background-color: #1B50B6;
 }
 
-#rectangle_three{
+#retangulo_tres{
     position: absolute;
     width: 616px;
     height: 1px;
@@ -42,7 +41,7 @@ body{
     background-color: #C4C4C4;
 }
 
-#rectangle_four{
+#retangulo_quatro{
     position: absolute;
     width: 616px;
     height: 1px;
@@ -64,6 +63,50 @@ body{
     border-radius: 12px;
 }
 
+#retangulo_seis{
+    position: absolute;
+    width: 616px;
+    height: 1px;
+    left: 350px;
+    top: 1047px;
+    margin-top: 20px;
+
+    background-color: #C4C4C4;
+}
+
+#retangulo_sete{
+    position: absolute;
+    width: 616px;
+    height: 1px;
+    left: 350px;
+    top: 1227px;
+    margin-top: 20px;
+
+    background-color: #C4C4C4;
+}
+
+#retangulo_oito{
+    position: absolute;
+    width: 616px;
+    height: 1px;
+    left: 350px;
+    top: 1647px;
+    margin-top: 20px;
+
+    background-color: #C4C4C4;
+}
+
+#retangulo_nove{
+    position: absolute;
+    width: 616px;
+    height: 1px;
+    left: 350px;
+    top: 1827px;
+    margin-top: 20px;
+
+    background-color: #C4C4C4;
+}
+
 h1{
     position: absolute;
     width: 364px;
@@ -80,7 +123,7 @@ h1{
     line-height: 37px;
 }
 
-#math h2{
+#matematica h2{
     position: absolute;
     width: 351px;
     height: 28px;
@@ -96,7 +139,7 @@ h1{
     line-height: 28px;
 }
 
-#history h2{
+#historia h2{
     position: absolute;
     width: 307px;
     height: 28px;
@@ -112,7 +155,7 @@ h1{
     line-height: 28px;
 }
 
-#geograph h2{
+#geografia h2{
     position: absolute;
     width: 329px;
     height: 28px;
@@ -154,7 +197,7 @@ h1{
 
     color: #222222;
 
-    font-family: Ubuntu;
+    font-family: 'Ubuntu';
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -162,16 +205,16 @@ h1{
 
 }
 
-#question_one h3{
+#questao_um h3{
     position: absolute;
-    width: 133px;
+    width: 633px;
     height: 18px;
     left: 350px;
     top: 286px;
 
     color: #222222;
 
-    /*font-family: 'Ubuntu';*/
+    font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -179,16 +222,16 @@ h1{
 
 }
 
-#question_two h3{
+#questao_dois h3{
     position: absolute;
-    width: 133px;
+    width: 633px;
     height: 18px;
     left: 350px;
     top: 469px;
 
     color: #222222;
 
-    /*font-family: 'Ubuntu';*/
+    font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -196,119 +239,119 @@ h1{
 
 }
 
-#question_three h3{
+#questao_tres h3{
     position: absolute;
-    width: 133px;
+    width: 633px;
     height: 18px;
     left: 350px;
     top: 652px;
 
     color: #222222;
 
-    /*font-family: 'Ubuntu';*/
+    font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
 }
 
-#question_four h3{
+#questao_quatro h3{
     position: absolute;
-    width: 214px;
+    width: 633px;
     height: 18px;
     left: 350px;
     top: 886px;
 
     color: #222222;
 
-    /*font-family: 'Ubuntu';*/
+    font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
 }
 
-#question_five h3{
+#questao_cinco h3{
     position: absolute;
-    width: 214px;
+    width: 633px;
     height: 18px;
     left: 350px;
     top: 1069px;
 
     color: #222222;
 
-    /*font-family: 'Ubuntu';*/
+    font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
 }
 
-#question_six h3{
+#questao_seis h3{
     position: absolute;
-    width: 133px;
+    width: 633px;
     height: 18px;
     left: 350px;
     top: 1252px;
 
     color: #222222;
 
-    /*font-family: 'Ubuntu';*/
+    font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
 }
 
-#question_seven h3{
+#questao_sete h3{
     position: absolute;
-    width: 445px;
+    width: 633px;
     height: 18px;
     left: 350px;
     top: 1486px;
 
     color: #222222;
 
-    /*font-family: 'Ubuntu';*/
+    font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
 }
 
-#question_eight h3{
+#questao_oito h3{
     position: absolute;
-    width: 445px;
+    width: 633px;
     height: 18px;
     left: 350px;
     top: 1669px;
 
     color: #222222;
 
-    /*font-family: 'Ubuntu';*/
+    font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
 }
 
-#question_nine h3{
+#questao_nove h3{
     position: absolute;
-    width: 445px;
+    width: 633px;
     height: 18px;
     left: 350px;
     top: 1852px;
 
     color: #222222;
 
-    /*font-family: 'Ubuntu';*/
+    font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
 }
 
-#radio_one{
+#radio_um{
     position: absolute;
     top: 319px;
     left: 353px;
@@ -316,7 +359,7 @@ h1{
     margin-left: 2px;
 }
 
-#radio_two{
+#radio_dois{
     position: absolute;
     top: 502px;
     left: 353px;
@@ -324,7 +367,7 @@ h1{
     margin-left: 2px;
 }
 
-#radio_three{
+#radio_tres{
     position: absolute;
     top: 685px;
     left: 353px;
@@ -332,7 +375,7 @@ h1{
     margin-left: 2px;
 }
 
-#radio_four{
+#radio_quatro{
     position: absolute;
     top: 919px;
     left: 353px;
@@ -340,7 +383,7 @@ h1{
     margin-left: 2px;
 }
 
-#radio_five{
+#radio_cinco{
     position: absolute;
     top: 1102px;
     left: 353px;
@@ -348,7 +391,7 @@ h1{
     margin-left: 2px;
 }
 
-#radio_six{
+#radio_seis{
     position: absolute;
     top: 1285px;
     left: 353px;
@@ -356,7 +399,7 @@ h1{
     margin-left: 2px;
 }
 
-#radio_seven{
+#radio_sete{
     position: absolute;
     top: 1519px;
     left: 353px;
@@ -364,7 +407,7 @@ h1{
     margin-left: 2px;
 }
 
-#radio_eight{
+#radio_oito{
     position: absolute;
     top: 1702px;
     left: 353px;
@@ -372,7 +415,7 @@ h1{
     margin-left: 2px;
 }
 
-#radio_nine{
+#radio_nove{
     position: absolute;
     top: 1885px;
     left: 353px;
@@ -380,9 +423,9 @@ h1{
     margin-left: 2px;
 }
 
-#lbl_one{
+#lbl_um{
     position: absolute;
-    width: 10px;
+    width: 700px;
     height: 18px;
     left: 24px;
 
@@ -395,9 +438,9 @@ h1{
     line-height: 18px;
 }
 
-#lbl_two{
+#lbl_dois{
     position: absolute;
-    width: 10px;
+    width: 700px;
     height: 18px;
     left: 24px;
 
@@ -410,9 +453,9 @@ h1{
     line-height: 18px;
 }
 
-#lbl_three{
+#lbl_tres{
     position: absolute;
-    width: 10px;
+    width: 700px;
     height: 18px;
     left: 24px;
 
@@ -499,6 +542,23 @@ h1{
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
+}
+
+#div_voltar #voltar{
+    position: absolute;
+    width: 47px;
+    height: 18px;
+    left: 358px;
+    top: 2059px;
+
+    color: #1B50B6;
+
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18px;
+
 }
 
 #grafico{
